--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -3,13 +3,23 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
     height: 100vh;
+}
+
+.bg-container {
+    background-size: cover;
+    /* 背景图片大小根据容器自适应 */
+    background-repeat: repeat;
+    /* 背景图片平铺展示 */
+    background-position: center center;
+    /* 背景图片居中显示 */
 }
 
 .row {
     width: 100%;
     /* width: 390px; */
-    margin-bottom: 10px;
+    margin-bottom: 2px;
     display: flex;
     /* overflow-x: auto; 添加横向滚动条 */
     height: 140px;
@@ -18,7 +28,7 @@
 .group-container {
     width: 100%;
     display: flex;
-    height: 650px;
+    height: 310px;
 }
 
 .item {
@@ -50,7 +60,7 @@ input {
 }
 
 button {
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 .row_p {
